src/components/prompts/style.css
.promptOverlay {
    width: 900px;
    height: 100%;
    background: radial-gradient(rgba(51, 51, 51, 0.6), rgba(51, 51, 51, 0.7), rgba(51, 51, 51, 0.9));
    position: absolute;
    top: 0;
    left: 0;
    transition: opacity ease-out 0.3s;
    opacity: 0;
}

.promptOverlay.prompt-animation {
  opacity: 1;
}

.promptMessage {
    color: #ddd;
    margin-top: 43px;
    font-family: Lato, "Helvetica Neue", Helvetica, Arial;
    width: 100%;
    text-align: center;
}

.promptWindow {
    width: 80%;
    font-family: Lato, "Helvetica Neue", Helvetica, Arial;
    position: absolute;
    top: 10%;
    left: 10%;
    min-height: 80%;
    padding: 10px 30px;
    background-color: #E7DCCA;
    border-color: #D1A53E;
    border-radius: 10px;
    border-width: 1px;
    color: #040403;
}

.promptWindow h3 {
    margin-left: 6px;
}

.promptWindow .cardHolder {
    cursor: pointer;
}

.promptWindow .cardView {
    top: 95px;
}

.promptWindow.promptChooseCards .cardSelect.notAvailable {
  filter: grayscale(100%);
}

.promptWindow.promptChooseCards .cardSelect.notAvailable .cardHolder {
  cursor: default;
}

.promptWindow .cardHolder {
    height: 180px;
    width: 123px;
    border-radius: 4px;
    overflow: hidden;
}

.promptOverlay .promptWindow.promptContracted {
  min-height: 65px;
}

.promptWindow .cardHolder img {
    max-width: 128px;
    max-height: 180px;
}

.promptWindow .promptMagi {
    display: flex;
    justify-content: center;
}

.promptWindow .cardsRow.smallCards {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    row-gap: 12px;
    max-height: 310px;
    overflow-y: scroll;
}

.promptWindow .cardsRow.smallCards .zoneCardSelect {
    display: flex;
    justify-content: center;
}

.promptWindow .cardsRow.smallCards .zoneCardSelect .cardHolder img {
    max-width: 64px;
}

.promptWindow .cardsRow.smallCards .zoneCardSelect .cardHolder {
    width: 64px;
    height: 94px;
}

.promptWindow .buttonHolder {
    text-align: center;
    margin-top: 50px;
}

.promptWindow .buttonHolder button {
    padding: 10px 15px;
    font-size: 20px;
    border-radius: 4px;
    border-width: 1px;
}

.promptChooseCards .cardsRow {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.promptChooseCards .cardsRow {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.promptChooseCards .cardsRow .zoneCardSelect .cardHolder {
    opacity: 0.6;
}

.promptChooseCards .zoneCardSelect.chosen .cardHolder {
    opacity: 1;
}

.promptChooseCards .cardSelect .cardHolder {
    opacity: 0.6;
}

.promptChooseCards .cardSelect.chosen .cardHolder {
    opacity: 1;
}

.promptMayEffect {
    width: 30%;
    min-height: 30%;
}

.promptMayEffect .buttons {
    margin: 20px;
    display: flex;
    justify-content: space-around;
}

.promptWindow.promptEnergyManipulation {
    top: 64%;
    min-height: 100px;
}

